feat: added DisjunctiveChaumPedersen ZKP and added tests