@@ -1,7 +1,7 @@
 package com.voteomatic.cryptography.voting;
 
 import com.voteomatic.cryptography.core.elgamal.Ciphertext;
-import com.voteomatic.cryptography.core.elgamal.ElGamalCipher;
+import com.voteomatic.cryptography.core.elgamal.*; // Import EncryptionResult etc.
 import com.voteomatic.cryptography.core.elgamal.PrivateKey;
 import com.voteomatic.cryptography.core.elgamal.PublicKey;
 import com.voteomatic.cryptography.core.zkp.SchnorrProof;
@@ -36,10 +36,10 @@ class VoteServiceImplTest {
     private KeyService keyService; // Although not directly used in methods, it's a dependency
 
     @Mock
-    private SchnorrProver schnorrProver; // Dependency for potential future proof generation
+    private ZkpProver prover; // Use generic interface
 
     @Mock
-    private SchnorrVerifier schnorrVerifier;
+    private ZkpVerifier verifier; // Use generic interface
 
     @InjectMocks
     private VoteServiceImpl voteService;
@@ -51,11 +51,14 @@ class VoteServiceImplTest {
     private VoterCredentials sampleCredentials;
     private PublicKey samplePublicKey;
     private PrivateKey samplePrivateKey; // Needed for tallying
-    private Ciphertext mockCiphertext1;
-    private Ciphertext mockCiphertext2;
-    private SchnorrStatement mockStatement; // Keep as specific type for clarity if needed
-    private SchnorrProof mockProof; // Use the specific type for mocking SchnorrVerifier
+    private Ciphertext mockCiphertext1; // Re-added for verifyVote tests
+    private Ciphertext mockCiphertext2; // Re-added for verifyVote tests
+    // Mocks for the new ZKP types
+    private DisjunctiveChaumPedersenStatement mockDcpStatement;
+    private DisjunctiveChaumPedersenProof mockDcpProof;
+    private BigInteger mockRandomness; // To store the mocked randomness 'r'
     private BigInteger p; // Prime modulus from public key
+    private BigInteger g; // Generator from public key
 
     @BeforeEach
     void setUp() {
@@ -67,64 +70,81 @@ class VoteServiceImplTest {
         BigInteger x = new BigInteger("198765432109876543210987654321"); // Example private key < p
         BigInteger y = g.modPow(x, p); // y = g^x mod p
 
+        this.g = g; // Store g for use in tests
         samplePublicKey = new PublicKey(p, g, y);
-        samplePrivateKey = new PrivateKey(p, g, x); // Use the same x as above
-        sampleVote = new Vote("candidateA");
+        // Mock the private key to return p and g when needed by tallyVotes
+        samplePrivateKey = mock(PrivateKey.class);
+        lenient().when(samplePrivateKey.getP()).thenReturn(p);
+        lenient().when(samplePrivateKey.getG()).thenReturn(g); // Might be needed if decrypt uses g
+        lenient().when(samplePrivateKey.getX()).thenReturn(x); // Needed for actual decryption mock
+        sampleVote = new Vote("Yes"); // Use "Yes" for the standard sample vote
         // voteWithNullOption = new Vote(null); // Moved instantiation to specific test
         voteWithEmptyOption = new Vote("");
         sampleCredentials = new VoterCredentials("voter123"); // Correct constructor
 
-        // Mock Ciphertexts (can be simple mocks or real objects with mock data)
+        // Re-add mock ciphertexts for verifyVote tests
         mockCiphertext1 = mock(Ciphertext.class);
         mockCiphertext2 = mock(Ciphertext.class);
+        // Use lenient() because these mocks are only used in verifyVote tests now.
+        lenient().when(mockCiphertext1.getC1()).thenReturn(BigInteger.ONE); // Dummy non-null value
+        lenient().when(mockCiphertext1.getC2()).thenReturn(BigInteger.ONE); // Dummy non-null value
+        lenient().when(mockCiphertext2.getC1()).thenReturn(BigInteger.TWO); // Dummy non-null value
+        lenient().when(mockCiphertext2.getC2()).thenReturn(BigInteger.TWO); // Dummy non-null value
 
-        mockStatement = mock(SchnorrStatement.class); // Mock specific statement if needed
-        mockProof = mock(SchnorrProof.class); // Mock specific proof type
+
+        // Mock the new ZKP types
+        mockDcpStatement = mock(DisjunctiveChaumPedersenStatement.class);
+        mockDcpProof = mock(DisjunctiveChaumPedersenProof.class);
+        mockRandomness = new BigInteger("987654321"); // Example dummy randomness
     }
 
     // --- Constructor Tests ---
     @Test
     void constructor_nullElGamalCipher_throwsException() {
         assertThrows(NullPointerException.class, () -> {
-            new VoteServiceImpl(null, keyService, schnorrProver, schnorrVerifier);
+            new VoteServiceImpl(null, keyService, prover, verifier);
         });
     }
 
     @Test
     void constructor_nullKeyService_throwsException() {
         assertThrows(NullPointerException.class, () -> {
-            new VoteServiceImpl(elGamalCipher, null, schnorrProver, schnorrVerifier);
+            new VoteServiceImpl(elGamalCipher, null, prover, verifier);
         });
     }
 
     @Test
     void constructor_nullProver_throwsException() {
         assertThrows(NullPointerException.class, () -> {
-            new VoteServiceImpl(elGamalCipher, keyService, null, schnorrVerifier);
+            new VoteServiceImpl(elGamalCipher, keyService, null, verifier);
         });
     }
 
     @Test
     void constructor_nullVerifier_throwsException() {
         assertThrows(NullPointerException.class, () -> {
-            new VoteServiceImpl(elGamalCipher, keyService, schnorrProver, null);
+            new VoteServiceImpl(elGamalCipher, keyService, prover, null);
         });
     }
 
 
     // --- castVote Tests ---
     @Test
-    void testCastVote_Success() throws VotingException { // Add throws clause
+    void testCastVote_Success() throws VotingException, ZkpException { // Add ZkpException
         // Arrange
-        // Encode vote string to BigInteger as done in VoteServiceImpl
-        byte[] voteBytes = sampleVote.getSelectedOption().getBytes(StandardCharsets.UTF_8);
-        BigInteger voteAsInt = new BigInteger(1, voteBytes); // Ensure positive
+        // Expected encoded message for "Yes" is g^1 = g
+        BigInteger expectedMessage = g;
 
-        Ciphertext expectedCiphertext = new Ciphertext(BigInteger.valueOf(123), BigInteger.valueOf(456)); // Correct constructor
+        Ciphertext expectedCiphertext = new Ciphertext(BigInteger.valueOf(123), BigInteger.valueOf(456)); // Dummy ciphertext
 
-        // Correct encrypt signature: publicKey, message
-        when(elGamalCipher.encrypt(eq(samplePublicKey), eq(voteAsInt)))
-                .thenReturn(expectedCiphertext);
+        // Mock the encrypt call to return EncryptionResult
+        EncryptionResult mockEncryptionResult = new EncryptionResult(expectedCiphertext, mockRandomness);
+        when(elGamalCipher.encrypt(eq(samplePublicKey), eq(expectedMessage)))
+                .thenReturn(mockEncryptionResult);
+
+        // Mock the prover call
+        when(prover.generateProof(any(DisjunctiveChaumPedersenStatement.class), any(DisjunctiveChaumPedersenWitness.class)))
+                .thenReturn(mockDcpProof);
 
         // Act
         // Correct castVote signature: credentials, vote, publicKey
@@ -132,12 +152,62 @@ class VoteServiceImplTest {
 
         // Assert
         assertNotNull(encryptedVote);
-        assertEquals(expectedCiphertext, encryptedVote.getVoteCiphertext()); // Correct getter
-        assertTrue(encryptedVote.getValidityProof().isEmpty(), "Proof should be Optional.empty for basic castVote");
+        assertEquals(expectedCiphertext, encryptedVote.getVoteCiphertext());
+        // Assert proof is present and correct
+        assertTrue(encryptedVote.getValidityProof().isPresent(), "Proof should be present");
+        assertEquals(mockDcpProof, encryptedVote.getValidityProof().get(), "Proof should match the mocked proof");
 
-        // Verify interaction (correct signature)
-        verify(elGamalCipher, times(1)).encrypt(eq(samplePublicKey), eq(voteAsInt));
+        // Verify interaction with the encoded message (g)
+        verify(elGamalCipher, times(1)).encrypt(eq(samplePublicKey), eq(expectedMessage));
+        // Verify prover was called
+        verify(prover, times(1)).generateProof(any(DisjunctiveChaumPedersenStatement.class), any(DisjunctiveChaumPedersenWitness.class));
     }
+
+    @Test
+    void testCastVote_Success_NoVote() throws VotingException, ZkpException { // Add ZkpException
+        // Arrange
+        Vote noVote = new Vote("No");
+        // Expected encoded message for "No" is g^0 = 1
+        BigInteger expectedMessage = BigInteger.ONE;
+        Ciphertext expectedCiphertext = new Ciphertext(BigInteger.valueOf(789), BigInteger.valueOf(101)); // Dummy ciphertext
+
+        // Mock the encrypt call to return EncryptionResult
+        EncryptionResult mockEncryptionResult = new EncryptionResult(expectedCiphertext, mockRandomness);
+        when(elGamalCipher.encrypt(eq(samplePublicKey), eq(expectedMessage)))
+                .thenReturn(mockEncryptionResult);
+
+        // Mock the prover call
+        when(prover.generateProof(any(DisjunctiveChaumPedersenStatement.class), any(DisjunctiveChaumPedersenWitness.class)))
+                .thenReturn(mockDcpProof);
+
+        // Act
+        EncryptedVote encryptedVote = voteService.castVote(sampleCredentials, noVote, samplePublicKey);
+
+        // Assert
+        assertNotNull(encryptedVote);
+        assertEquals(expectedCiphertext, encryptedVote.getVoteCiphertext());
+        // Assert proof is present and correct
+        assertTrue(encryptedVote.getValidityProof().isPresent(), "Proof should be present");
+        assertEquals(mockDcpProof, encryptedVote.getValidityProof().get(), "Proof should match the mocked proof");
+        verify(elGamalCipher, times(1)).encrypt(eq(samplePublicKey), eq(expectedMessage));
+        // Verify prover was called
+        verify(prover, times(1)).generateProof(any(DisjunctiveChaumPedersenStatement.class), any(DisjunctiveChaumPedersenWitness.class));
+    }
+
+    @Test
+    void testCastVote_InvalidVoteOption() {
+        // Arrange
+        Vote invalidVote = new Vote("Maybe");
+
+        // Act & Assert
+        VotingException thrown = assertThrows(VotingException.class, () -> {
+            voteService.castVote(sampleCredentials, invalidVote, samplePublicKey);
+        });
+        // The actual exception includes "Error casting vote: " prefix
+        assertEquals("Error casting vote: Invalid vote option: 'Maybe'. Only 'Yes' or 'No' are allowed.", thrown.getMessage());
+        verify(elGamalCipher, never()).encrypt(any(), any()); // Encryption should not be called
+    }
+
 
     @Test
     void testCastVote_NullCredentials() {
@@ -171,34 +241,18 @@ class VoteServiceImplTest {
         assertEquals("Vote option cannot be null or empty", thrown.getMessage());
     }
 
-    @Test
-    void testCastVote_MessageTooLarge() {
-        // Create a vote option whose byte representation is >= p
-        // This is hard to guarantee precisely, but we can use a very long string
-        String longOption = "A".repeat(200); // Likely > 128 bits when UTF-8 encoded
-        Vote largeVote = new Vote(longOption);
-        byte[] voteBytes = longOption.getBytes(StandardCharsets.UTF_8);
-        BigInteger voteAsInt = new BigInteger(1, voteBytes);
-
-        // Assume this voteAsInt is >= p for the test setup
-        assertTrue(voteAsInt.compareTo(p) >= 0, "Test setup requires encoded vote >= p");
-
-        VotingException thrown = assertThrows(VotingException.class, () -> {
-            voteService.castVote(sampleCredentials, largeVote, samplePublicKey);
-        });
-        // The original VotingException is caught and wrapped
-        assertEquals("Error casting vote: Vote encoding results in a value too large for the ElGamal parameters.", thrown.getMessage());
-    }
-
+    // testCastVote_MessageTooLarge is removed as it's no longer applicable
+    // with g^1/g^0 encoding.
 
     @Test
-    void testCastVote_EncryptionError() {
+    void testCastVote_EncryptionError() throws ZkpException { // Add ZkpException for verify(never()) signature check
         // Arrange
         byte[] voteBytes = sampleVote.getSelectedOption().getBytes(StandardCharsets.UTF_8);
         BigInteger voteAsInt = new BigInteger(1, voteBytes);
         RuntimeException encryptionException = new RuntimeException("Encryption failed"); // Or a more specific crypto exception if defined
 
-        when(elGamalCipher.encrypt(eq(samplePublicKey), eq(voteAsInt)))
+        // Mock encrypt to throw exception
+        when(elGamalCipher.encrypt(eq(samplePublicKey), any(BigInteger.class))) // Match any BigInteger message for simplicity here
                 .thenThrow(encryptionException);
 
         // Act & Assert
@@ -208,7 +262,8 @@ class VoteServiceImplTest {
 
         assertEquals("Error casting vote: Encryption failed", thrown.getMessage()); // Corrected message
         assertEquals(encryptionException, thrown.getCause());
-        verify(elGamalCipher, times(1)).encrypt(eq(samplePublicKey), eq(voteAsInt));
+        verify(elGamalCipher, times(1)).encrypt(eq(samplePublicKey), any(BigInteger.class));
+        verify(prover, never()).generateProof(any(), any()); // Prover should not be called if encryption fails
     }
 
     @Test
@@ -221,107 +276,158 @@ class VoteServiceImplTest {
 
     // --- tallyVotes Tests ---
     @Test
-    void testTallyVotes_Success() throws VotingException { // Add throws clause
+    void testTallyVotes_Success_Homomorphic() throws VotingException {
         // Arrange
-        // Correct EncryptedVote constructor: ciphertext, proof (can be null)
-        EncryptedVote ev1 = new EncryptedVote(mockCiphertext1, null);
-        EncryptedVote ev2 = new EncryptedVote(mockCiphertext2, null);
+        // Create real ciphertexts for testing multiplication
+        // Let's assume vote "1" (g^1) and vote "0" (g^0 = 1) for simplicity
+        // Note: Real encryption involves randomness (k), but for testing the *tally*
+        // we can use simplified ciphertexts if needed, or mock the encryption result.
+        // Let's use simplified ones where k=1 for illustration.
+        // C1 = (g^k, m1 * y^k) = (g^1, g^1 * y^1) = (g, g*y)
+        // C2 = (g^k, m2 * y^k) = (g^1, g^0 * y^1) = (g, 1*y) = (g, y)
+        BigInteger y = samplePublicKey.getY();
+        Ciphertext ct1 = new Ciphertext(g.mod(p), g.multiply(y).mod(p)); // Represents m1=g^1
+        Ciphertext ct2 = new Ciphertext(g.mod(p), y.mod(p));             // Represents m2=g^0=1
+
+        EncryptedVote ev1 = new EncryptedVote(ct1, null);
+        EncryptedVote ev2 = new EncryptedVote(ct2, null);
         List<EncryptedVote> encryptedVotes = Arrays.asList(ev1, ev2);
 
-        BigInteger decryptedValue1 = BigInteger.ONE; // Represents candidate A
-        BigInteger decryptedValue2 = BigInteger.TWO; // Represents candidate B (example)
-        BigInteger expectedTally = decryptedValue1.add(decryptedValue2); // Simple sum for example
+        // Calculate expected product ciphertext: C_total = C_identity * C1 * C2
+        Ciphertext identity = new Ciphertext(BigInteger.ONE, BigInteger.ONE);
+        Ciphertext expectedProductCiphertext = identity.multiply(ct1, p).multiply(ct2, p);
 
-        // Mock decryption for each ciphertext (Correct signature: privateKey, ciphertext)
-        when(elGamalCipher.decrypt(eq(samplePrivateKey), eq(mockCiphertext1))).thenReturn(decryptedValue1);
-        when(elGamalCipher.decrypt(eq(samplePrivateKey), eq(mockCiphertext2))).thenReturn(decryptedValue2);
+        // Expected decrypted result: m1 * m2 = g^1 * g^0 = g^1 = g
+        BigInteger expectedDecryptedResult = g; // g^k where k = 1 + 0 = 1
+
+        // Mock the *final* decryption call
+        when(elGamalCipher.decrypt(eq(samplePrivateKey), eq(expectedProductCiphertext)))
+                .thenReturn(expectedDecryptedResult);
 
         // Act
-        Object tallyResult = voteService.tallyVotes(encryptedVotes, samplePrivateKey);
+        BigInteger tallyResult = voteService.tallyVotes(encryptedVotes, samplePrivateKey);
 
         // Assert
         assertNotNull(tallyResult);
-        assertTrue(tallyResult instanceof BigInteger, "Tally result should be a BigInteger sum");
-        assertEquals(expectedTally, (BigInteger) tallyResult);
+        // Assert that the calculated tally count 'k' is correct (1 in this case: Yes=1, No=0)
+        assertEquals(BigInteger.ONE, tallyResult, "Tally count 'k' should be 1 for one 'Yes' and one 'No' vote");
 
-        // Verify interactions (Correct signature)
-        verify(elGamalCipher, times(1)).decrypt(eq(samplePrivateKey), eq(mockCiphertext1));
-        verify(elGamalCipher, times(1)).decrypt(eq(samplePrivateKey), eq(mockCiphertext2));
-        verify(elGamalCipher, times(encryptedVotes.size())).decrypt(eq(samplePrivateKey), any(Ciphertext.class));
+        // Verify final decryption was called exactly once with the correct product ciphertext
+        verify(elGamalCipher, times(1)).decrypt(eq(samplePrivateKey), eq(expectedProductCiphertext));
+        verify(elGamalCipher, times(1)).decrypt(any(), any()); // Ensure no other decryptions happened
     }
 
     @Test
-    void testTallyVotes_EmptyList() throws VotingException {
+    void testTallyVotes_EmptyList_Homomorphic() throws VotingException {
         // Arrange
-        List<EncryptedVote> emptyList = Collections.emptyList(); // Use Collections.emptyList()
+        List<EncryptedVote> emptyList = Collections.emptyList();
 
         // Act
-        Object tallyResult = voteService.tallyVotes(emptyList, samplePrivateKey);
+        BigInteger tallyResult = voteService.tallyVotes(emptyList, samplePrivateKey);
 
         // Assert
         assertNotNull(tallyResult);
-        assertTrue(tallyResult instanceof BigInteger, "Tally result should be a BigInteger");
-        assertEquals(BigInteger.ZERO, (BigInteger) tallyResult, "Tally of empty list should be zero");
+        // Empty list tally now returns k = 0
+        assertEquals(BigInteger.ZERO, tallyResult, "Tally of empty list should be BigInteger.ZERO (k=0)");
         verify(elGamalCipher, never()).decrypt(any(), any()); // Decryption should not be called
     }
 
      @Test
-    void testTallyVotes_ListWithNullVote() throws VotingException {
-        // Arrange
-        EncryptedVote ev1 = new EncryptedVote(mockCiphertext1, null);
-        List<EncryptedVote> encryptedVotes = Arrays.asList(ev1, null); // Add null entry
-        BigInteger decryptedValue1 = BigInteger.TEN;
-        when(elGamalCipher.decrypt(eq(samplePrivateKey), eq(mockCiphertext1))).thenReturn(decryptedValue1);
+    void testTallyVotes_ListWithNullVote_Homomorphic() throws VotingException {
+       // Arrange
+       // Use a real ciphertext for the valid vote
+       // Arrange: One valid "Yes" vote (g^1) and one null entry
+       Ciphertext ctYes = new Ciphertext(g.modPow(BigInteger.TWO, p), g.multiply(samplePublicKey.getY().modPow(BigInteger.TWO, p)).mod(p)); // Enc(g^1)
+       EncryptedVote evYes = new EncryptedVote(ctYes, null);
+       List<EncryptedVote> encryptedVotes = Arrays.asList(evYes, null); // Add null entry
 
-        // Act
-        Object tallyResult = voteService.tallyVotes(encryptedVotes, samplePrivateKey);
+       // Calculate expected product ciphertext (identity * ctYes)
+       Ciphertext identity = new Ciphertext(BigInteger.ONE, BigInteger.ONE);
+       Ciphertext expectedProductCiphertext = identity.multiply(ctYes, p);
 
-        // Assert: Should skip the null entry and tally the valid one
-        assertEquals(decryptedValue1, tallyResult);
-        verify(elGamalCipher, times(1)).decrypt(eq(samplePrivateKey), eq(mockCiphertext1));
-        verify(elGamalCipher, times(1)).decrypt(any(), any()); // Called only once
-    }
+       // Expected decrypted result (g^k): g^1 = g
+       BigInteger expectedDecryptedGk = g;
+       // Expected final tally count (k): 1
+       BigInteger expectedTallyCountK = BigInteger.ONE;
 
-    @Test
-    void testTallyVotes_ListWithVoteHavingNullCiphertext() throws VotingException {
-        // Arrange
-        EncryptedVote ev1 = new EncryptedVote(mockCiphertext1, null);
-        EncryptedVote evWithNullCipher = new EncryptedVote(null, null); // Vote with null ciphertext
-        List<EncryptedVote> encryptedVotes = Arrays.asList(ev1, evWithNullCipher);
-        BigInteger decryptedValue1 = BigInteger.TEN;
-        when(elGamalCipher.decrypt(eq(samplePrivateKey), eq(mockCiphertext1))).thenReturn(decryptedValue1);
+       // Mock the final decryption
+       when(elGamalCipher.decrypt(eq(samplePrivateKey), eq(expectedProductCiphertext)))
+               .thenReturn(expectedDecryptedGk);
 
-        // Act
-        Object tallyResult = voteService.tallyVotes(encryptedVotes, samplePrivateKey);
+       // Act
+       BigInteger tallyResult = voteService.tallyVotes(encryptedVotes, samplePrivateKey);
 
-        // Assert: Should skip the entry with null ciphertext and tally the valid one
-        assertEquals(decryptedValue1, tallyResult);
-        verify(elGamalCipher, times(1)).decrypt(eq(samplePrivateKey), eq(mockCiphertext1));
-        verify(elGamalCipher, times(1)).decrypt(any(), any()); // Called only once
-    }
-
+       // Assert: Should skip the null entry and return the correct count k
+       assertEquals(expectedTallyCountK, tallyResult);
+       verify(elGamalCipher, times(1)).decrypt(eq(samplePrivateKey), eq(expectedProductCiphertext));
+       verify(elGamalCipher, times(1)).decrypt(any(), any()); // Called only once
+   }
 
     @Test
-    void testTallyVotes_DecryptionError() {
-        // Arrange
-        EncryptedVote ev1 = new EncryptedVote(mockCiphertext1, null);
-        List<EncryptedVote> encryptedVotes = List.of(ev1);
-        RuntimeException decryptionException = new RuntimeException("Decryption failed");
+    void testTallyVotes_ListWithVoteHavingNullCiphertext_Homomorphic() throws VotingException {
+       // Arrange
+       // Use a real ciphertext for the valid vote
+       // Arrange: One valid "No" vote (g^0) and one vote with null ciphertext
+       Ciphertext ctNo = new Ciphertext(g.modPow(BigInteger.valueOf(3), p), BigInteger.ONE.multiply(samplePublicKey.getY().modPow(BigInteger.valueOf(3), p)).mod(p)); // Enc(g^0)
+       EncryptedVote evNo = new EncryptedVote(ctNo, null);
+       EncryptedVote evWithNullCipher = new EncryptedVote(null, null); // Vote with null ciphertext
+       List<EncryptedVote> encryptedVotes = Arrays.asList(evNo, evWithNullCipher);
 
-        when(elGamalCipher.decrypt(eq(samplePrivateKey), eq(mockCiphertext1)))
-                .thenThrow(decryptionException);
+       // Calculate expected product ciphertext (identity * ctNo)
+       Ciphertext identity = new Ciphertext(BigInteger.ONE, BigInteger.ONE);
+       Ciphertext expectedProductCiphertext = identity.multiply(ctNo, p);
 
-        // Act & Assert
-        VotingException thrown = assertThrows(VotingException.class, () -> {
-            voteService.tallyVotes(encryptedVotes, samplePrivateKey);
-        }, "Should throw VotingException when decryption fails");
+       // Expected decrypted result (g^k): g^0 = 1
+       BigInteger expectedDecryptedGk = BigInteger.ONE;
+       // Expected final tally count (k): 0
+       BigInteger expectedTallyCountK = BigInteger.ZERO;
 
-        assertEquals("Error decrypting a vote during tally: Decryption failed", thrown.getMessage()); // Corrected message
-        assertEquals(decryptionException, thrown.getCause());
-        verify(elGamalCipher, times(1)).decrypt(eq(samplePrivateKey), eq(mockCiphertext1));
-    }
+       // Mock the final decryption
+       when(elGamalCipher.decrypt(eq(samplePrivateKey), eq(expectedProductCiphertext)))
+               .thenReturn(expectedDecryptedGk);
 
-     @Test
+       // Act
+       BigInteger tallyResult = voteService.tallyVotes(encryptedVotes, samplePrivateKey);
+
+       // Assert: Should skip the entry with null ciphertext and return the correct count k
+       assertEquals(expectedTallyCountK, tallyResult);
+       verify(elGamalCipher, times(1)).decrypt(eq(samplePrivateKey), eq(expectedProductCiphertext));
+       verify(elGamalCipher, times(1)).decrypt(any(), any()); // Called only once
+   }
+
+
+    @Test
+    void testTallyVotes_FinalDecryptionError_Homomorphic() {
+       // Arrange
+       // Use a real ciphertext
+       // Arrange: One valid "Yes" vote
+       Ciphertext ctYes = new Ciphertext(g.modPow(BigInteger.TWO, p), g.multiply(samplePublicKey.getY().modPow(BigInteger.TWO, p)).mod(p)); // Enc(g^1)
+       EncryptedVote evYes = new EncryptedVote(ctYes, null);
+       List<EncryptedVote> encryptedVotes = List.of(evYes);
+
+       // Calculate expected product ciphertext (identity * ct1)
+       Ciphertext identity = new Ciphertext(BigInteger.ONE, BigInteger.ONE);
+       Ciphertext expectedProductCiphertext = identity.multiply(ctYes, p);
+
+       RuntimeException decryptionException = new RuntimeException("Final Decryption failed");
+
+       // Mock the *final* decryption call to throw an error
+       when(elGamalCipher.decrypt(eq(samplePrivateKey), eq(expectedProductCiphertext)))
+               .thenThrow(decryptionException);
+
+       // Act & Assert
+       VotingException thrown = assertThrows(VotingException.class, () -> {
+           voteService.tallyVotes(encryptedVotes, samplePrivateKey);
+       }, "Should throw VotingException when final decryption fails");
+
+       // Verify the error message reflects the final decryption or interpretation step
+       assertEquals("Error during final tally decryption or interpretation: Final Decryption failed", thrown.getMessage());
+       assertEquals(decryptionException, thrown.getCause());
+       verify(elGamalCipher, times(1)).decrypt(eq(samplePrivateKey), eq(expectedProductCiphertext));
+       verify(elGamalCipher, times(1)).decrypt(any(), any()); // Ensure only the final decryption was attempted
+   }
+
+    @Test
     void testTallyVotes_NullPrivateKey() {
         // Arrange
         EncryptedVote ev1 = new EncryptedVote(mockCiphertext1, null);
@@ -333,123 +439,148 @@ class VoteServiceImplTest {
         }, "Should throw NullPointerException if private key is null");
     }
 
-    // --- verifyVote Tests ---
     @Test
-    void testVerifyVote_WithValidSchnorrProof() throws VotingException, ZkpException { // Add throws
+    void testTallyVotes_CannotDetermineTally() {
+        // Arrange: One "Yes" vote
+        Ciphertext ctYes = new Ciphertext(g.modPow(BigInteger.TWO, p), g.multiply(samplePublicKey.getY().modPow(BigInteger.TWO, p)).mod(p)); // Enc(g^1)
+        EncryptedVote evYes = new EncryptedVote(ctYes, null);
+        List<EncryptedVote> encryptedVotes = List.of(evYes);
+
+        Ciphertext identity = new Ciphertext(BigInteger.ONE, BigInteger.ONE);
+        Ciphertext expectedProductCiphertext = identity.multiply(ctYes, p);
+
+        // Mock decryption to return a value that is NOT g^0 or g^1 (assuming g != 10)
+        BigInteger invalidDecryptedResult = BigInteger.TEN;
+        when(elGamalCipher.decrypt(eq(samplePrivateKey), eq(expectedProductCiphertext)))
+                .thenReturn(invalidDecryptedResult);
+
+        // Act & Assert
+        VotingException thrown = assertThrows(VotingException.class, () -> {
+            voteService.tallyVotes(encryptedVotes, samplePrivateKey);
+        });
+
+        // Assert the exact message to pinpoint discrepancies
+        // Expect the wrapped exception message
+        assertEquals("Error during final tally decryption or interpretation: Could not determine the vote tally (k) from the decrypted result (g^k). Decrypted value: 10", thrown.getMessage());
+        verify(elGamalCipher, times(1)).decrypt(eq(samplePrivateKey), eq(expectedProductCiphertext));
+    }
+
+
+    // --- verifyVote Tests (Updated for Disjunctive Chaum-Pedersen) ---
+
+    // Helper method to create an EncryptedVote with the mock DCP proof
+    private EncryptedVote createEncryptedVoteWithMockProof() {
+        // Use lenient() as these mocks might not be used in every test path
+        lenient().when(mockCiphertext1.getC1()).thenReturn(BigInteger.ONE);
+        lenient().when(mockCiphertext1.getC2()).thenReturn(BigInteger.TEN);
+        return new EncryptedVote(mockCiphertext1, mockDcpProof);
+    }
+
+    @Test
+    void testVerifyVote_WithValidProof() throws VotingException, ZkpException {
         // Arrange
-        // Correct EncryptedVote constructor
-        EncryptedVote encryptedVoteWithProof = new EncryptedVote(mockCiphertext1, mockProof);
-        // Ensure arguments match SchnorrVerifier.verifyProof(SchnorrStatement, SchnorrProof)
-        when(schnorrVerifier.verifyProof(eq(mockStatement), eq(mockProof))).thenReturn(true);
+        EncryptedVote encryptedVoteWithProof = createEncryptedVoteWithMockProof();
+        // Mock the generic verifier to return true for the specific statement/proof types
+        when(verifier.verifyProof(eq(mockDcpStatement), eq(mockDcpProof))).thenReturn(true);
 
         // Act
-        boolean isValid = voteService.verifyVote(encryptedVoteWithProof, mockStatement, mockProof);
+        boolean isValid = voteService.verifyVote(encryptedVoteWithProof, mockDcpStatement, mockDcpProof);
 
         // Assert
         assertTrue(isValid);
-        verify(schnorrVerifier, times(1)).verifyProof(eq(mockStatement), eq(mockProof));
+        verify(verifier, times(1)).verifyProof(eq(mockDcpStatement), eq(mockDcpProof));
     }
 
     @Test
-    void testVerifyVote_NullEncryptedVote() {
-         assertThrows(NullPointerException.class, () -> {
-            voteService.verifyVote(null, mockStatement, mockProof);
-        });
+    void testVerifyVote_WithInvalidProof() throws VotingException, ZkpException {
+        // Arrange
+        EncryptedVote encryptedVoteWithProof = createEncryptedVoteWithMockProof();
+        when(verifier.verifyProof(eq(mockDcpStatement), eq(mockDcpProof))).thenReturn(false);
+
+        // Act
+        boolean isValid = voteService.verifyVote(encryptedVoteWithProof, mockDcpStatement, mockDcpProof);
+
+        // Assert
+        assertFalse(isValid);
+        verify(verifier, times(1)).verifyProof(eq(mockDcpStatement), eq(mockDcpProof));
     }
+
+
+    // Removed testVerifyVote_NullEncryptedVote as the parameter is currently unused in verifyVote
+
+    @Test
+    void testVerifyVote_NullProofParameter() throws VotingException, ZkpException {
+        // Arrange
+        EncryptedVote encryptedVoteWithProof = createEncryptedVoteWithMockProof(); // EV has a proof internally
+
+        // Act & Assert
+        // Pass null explicitly for the proof parameter - should throw NullPointerException
+        NullPointerException thrown = assertThrows(NullPointerException.class, () -> {
+             voteService.verifyVote(encryptedVoteWithProof, mockDcpStatement, null);
+        });
+        assertEquals("Proof cannot be null for verification", thrown.getMessage());
+        verify(verifier, never()).verifyProof(any(), any()); // Verifier should not be called
+    }
+
+    @Test
+    void testVerifyVote_NullStatementParameter() throws VotingException, ZkpException {
+        // Arrange
+        EncryptedVote encryptedVoteWithProof = createEncryptedVoteWithMockProof(); // EV has a proof internally
+
+        // Act & Assert
+        // Pass null explicitly for the statement parameter - should throw NullPointerException
+        NullPointerException thrown = assertThrows(NullPointerException.class, () -> {
+             voteService.verifyVote(encryptedVoteWithProof, null, mockDcpProof);
+        });
+        assertEquals("Statement cannot be null for verification", thrown.getMessage());
+        verify(verifier, never()).verifyProof(any(), any()); // Verifier should not be called
+    }
+
 
 
     @Test
     void testVerifyVote_VerifierThrowsZkpException() throws ZkpException {
         // Arrange
-        EncryptedVote encryptedVoteWithProof = new EncryptedVote(mockCiphertext1, mockProof);
+        EncryptedVote encryptedVoteWithProof = createEncryptedVoteWithMockProof();
         ZkpException zkpException = new ZkpException("Verifier error");
 
-        when(schnorrVerifier.verifyProof(eq(mockStatement), eq(mockProof)))
+        when(verifier.verifyProof(eq(mockDcpStatement), eq(mockDcpProof)))
                 .thenThrow(zkpException);
 
         // Act & Assert
-        // Update: The service method currently propagates ZkpException directly.
-        // Test should expect ZkpException as per current implementation.
+        // Expect ZkpException to be propagated
         ZkpException thrown = assertThrows(ZkpException.class, () -> {
-             voteService.verifyVote(encryptedVoteWithProof, mockStatement, mockProof);
-        }, "Should throw ZkpException when verifier throws ZkpException");
+             voteService.verifyVote(encryptedVoteWithProof, mockDcpStatement, mockDcpProof);
+        });
 
-        // Assert that the caught exception is the exact instance we expected
-        assertSame(zkpException, thrown, "The caught exception should be the same instance thrown by the mock");
-        assertEquals("Verifier error", thrown.getMessage()); // Verify the message is correct on the caught instance
-        verify(schnorrVerifier, times(1)).verifyProof(eq(mockStatement), eq(mockProof));
+        assertSame(zkpException, thrown);
+        assertEquals("Verifier error", thrown.getMessage());
+        verify(verifier, times(1)).verifyProof(eq(mockDcpStatement), eq(mockDcpProof));
     }
 
      @Test
     void testVerifyVote_VerifierThrowsRuntimeException() throws ZkpException {
         // Arrange
-        EncryptedVote encryptedVoteWithProof = new EncryptedVote(mockCiphertext1, mockProof);
+        EncryptedVote encryptedVoteWithProof = createEncryptedVoteWithMockProof();
         RuntimeException runtimeException = new RuntimeException("Unexpected verifier error");
 
-        when(schnorrVerifier.verifyProof(eq(mockStatement), eq(mockProof)))
+        when(verifier.verifyProof(eq(mockDcpStatement), eq(mockDcpProof)))
                 .thenThrow(runtimeException);
 
         // Act & Assert
+        // Expect runtime exceptions to be wrapped in VotingException
         VotingException thrown = assertThrows(VotingException.class, () -> {
-             voteService.verifyVote(encryptedVoteWithProof, mockStatement, mockProof);
-        }, "Should wrap unexpected exceptions in VotingException");
+             voteService.verifyVote(encryptedVoteWithProof, mockDcpStatement, mockDcpProof);
+        });
 
         assertEquals("Unexpected error during vote verification: Unexpected verifier error", thrown.getMessage());
         assertSame(runtimeException, thrown.getCause());
-        verify(schnorrVerifier, times(1)).verifyProof(eq(mockStatement), eq(mockProof));
+        verify(verifier, times(1)).verifyProof(eq(mockDcpStatement), eq(mockDcpProof));
     }
 
-
-    @Test
-    void testVerifyVote_WithInvalidSchnorrProof() throws VotingException, ZkpException { // Add throws
-        // Arrange
-        // Correct EncryptedVote constructor
-        EncryptedVote encryptedVoteWithProof = new EncryptedVote(mockCiphertext2, mockProof);
-        when(schnorrVerifier.verifyProof(eq(mockStatement), eq(mockProof))).thenReturn(false);
-
-        // Act
-        boolean isValid = voteService.verifyVote(encryptedVoteWithProof, mockStatement, mockProof);
-
-        // Assert
-        assertFalse(isValid);
-        verify(schnorrVerifier, times(1)).verifyProof(eq(mockStatement), eq(mockProof));
-    }
-
-    @Test
-    void testVerifyVote_NullProofParameter() throws VotingException, ZkpException { // Add throws
-        // Arrange
-        EncryptedVote encryptedVoteWithProof = new EncryptedVote(mockCiphertext1, mockProof); // EV has a proof internally
-        // Act
-        // Pass null explicitly for the proof parameter to test that specific path in verifyVote
-        boolean isValid = voteService.verifyVote(encryptedVoteWithProof, mockStatement, null);
-
-        // Assert
-        assertFalse(isValid, "Verification should fail if the provided proof parameter is null");
-        verify(schnorrVerifier, never()).verifyProof(any(), any()); // Verifier should not be called
-    }
-
-    @Test
-    void testVerifyVote_StatementNotSchnorr() throws VotingException, ZkpException {
-        EncryptedVote encryptedVoteWithProof = new EncryptedVote(mockCiphertext1, mockProof);
-        Statement wrongStatement = mock(Statement.class); // Mock the interface, not SchnorrStatement
-
-        IllegalArgumentException thrown = assertThrows(IllegalArgumentException.class, () -> {
-            voteService.verifyVote(encryptedVoteWithProof, wrongStatement, mockProof);
-        });
-        assertEquals("Statement must be an instance of SchnorrStatement for verification.", thrown.getMessage());
-        verify(schnorrVerifier, never()).verifyProof(any(), any());
-    }
-
-    @Test
-    void testVerifyVote_ProofNotSchnorr() throws VotingException, ZkpException {
-        EncryptedVote encryptedVoteWithProof = new EncryptedVote(mockCiphertext1, mockProof);
-        Proof wrongProof = mock(Proof.class); // Mock the interface, not SchnorrProof
-
-        IllegalArgumentException thrown = assertThrows(IllegalArgumentException.class, () -> {
-            voteService.verifyVote(encryptedVoteWithProof, mockStatement, wrongProof);
-        });
-        assertEquals("Proof must be an instance of SchnorrProof for verification.", thrown.getMessage());
-        verify(schnorrVerifier, never()).verifyProof(any(), any());
-    }
+    // Note: Tests for specific statement/proof types (like StatementNotSchnorr) are removed
+    // as the verifyVote method itself doesn't enforce specific types beyond what the
+    // injected verifier handles (or what the method itself checks before calling the verifier).
+    // The current verifyVote implementation doesn't have explicit type checks before calling verifyProof.
 
 }
